--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,58 @@ html {
 body {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
+  min-width: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin-right: 5px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.kicker {
+  color: rgb(237, 100, 54);
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+.img-btn {
+  background-color: rgb(237, 100, 54);
+  border-radius: 20px;
+  padding: 25px;
+  color: white;
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.picture-section {
+  display: flex;
+  width: 100%;
+  padding-top: 15px;
+  justify-content: center;
+}
+
+images {
+  display: flex;
+  width: 100%;
+  padding: 0 50px;
+}
+
+img {
+  width: 20rem;
+  height: 15rem;
+  border-radius: 15px;
+  padding: 10px;
 }
 
 /*# sourceMappingURL=styles.css.map */
